--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.6.1",
+    "iron-session": "^8.0.4",
+    "jose": "^6.0.10",
     "lucide-react": "^0.503.0",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
