--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@sendgrid/mail": "^8.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -24,6 +25,7 @@
     "iron-session": "^8.0.4",
     "jose": "^6.0.10",
     "lucide-react": "^0.503.0",
+    "nanoid": "^5.1.5",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
