--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
