feat: update dependencies and add Sanity configuration
- Changed Next.js version to 15.0.0 and React to 19.0.0 in package.json
- Added Sanity client and vision dependencies
- Updated PostCSS configuration to use '@tailwindcss/postcss'
- Created sanity.cli.ts for Sanity CLI configuration
- Created sanity.config.ts for Sanity Studio configuration
- Added writeClient.ts for server-side client with write access
- Updated Tailwind CSS configuration for improved color management and removed unused plugins

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "sanity typegen generate",
+    "prebuild": "npm run typegen"
   },
   "dependencies": {
     "@firebase/app": "^0.11.5",
@@ -17,7 +19,11 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@sanity/client": "^7.13.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.19.0",
     "@sendgrid/mail": "^8.1.5",
+    "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,25 +34,29 @@
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.503.0",
     "nanoid": "^5.1.5",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.0.0",
+    "next-sanity": "^11.6.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "sanity": "^4.19.0",
     "server-only": "^0.0.1",
     "sharp": "^0.34.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.2.0",
     "vercel": "^41.7.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "@sanity/cli": "^4.19.0",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
