feat: Implement service selection and checkout flow
- Added ServicePageClient component for selecting repair services.
- Created page for service selection with localized labels and routing.
- Introduced TempCartPage as a placeholder for cart functionality.
- Developed TwoOptionPage for detailed repair options based on selected service.
- Implemented DeliveryPage for user address input during checkout.
- Created OrderLayout to verify user session before accessing checkout.
- Added CheckoutPage to manage user address checks and navigation.
- Established CartContext for managing cart state and form data.
- Introduced LanguageContext for managing application language settings.
- Removed legacy Zustand store and hydration hooks in favor of context-based state management.
- Updated form data types to support new slug-based structure for Sanity integration.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typegen": "sanity typegen generate",
-    "prebuild": "npm run typegen"
+    "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
     "@firebase/app": "^0.11.5",
@@ -45,8 +44,7 @@
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.2.0",
     "vercel": "^41.7.0",
-    "zod": "^3.24.3",
-    "zustand": "^5.0.3"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@sanity/cli": "^4.19.0",
